# ecoindex_scrap_python

./: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  test.py
ecoindex_scraper/: __init__.py  models.py  scrap.py  utils.py
tests/: docker.py  test_models.py
tests/ecoindex_scraper/: test_scraper.py
