[tool.poetry]
name = "ecoindex_scraper"
version = "v2.8.0b1"
description = "Ecoindex_scraper module provides a way to scrape data from given website while simulating a real web browser"
authors = ["Vincent Vatelot <vincent.vatelot@ik.me>"]
license = "MIT"
readme = "README.md"
homepage = "http://www.ecoindex.fr"
repository = "https://github.com/cnumr/ecoindex_scraper_python"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
ecoindex = {version = "^5.2.0b1", allow-prereleases = true}
undetected-chromedriver = "^3.1.6"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
